@startuml

title __DB's Class Diagram__\n

  namespace com.example.test_2 {
    namespace ui.home {
      namespace db {
        class com.example.test_2.ui.home.db.DbDao {
            - context : Context
            - db : SQLiteDatabase
            + DbDao()
            + delete()
            + deleteData()
            + hasData()
            + insertData()
            + queryData()
            - init()
        }
      }
    }
  }
  

  namespace com.example.test_2 {
    namespace ui.home {
      namespace db {
        class com.example.test_2.ui.home.db.RecordSQLiteOpenHelper {
            {static} - name : String
            {static} - version : Integer
            + RecordSQLiteOpenHelper()
            + onCreate()
            + onUpgrade()
        }
      }
    }
  }
  

  com.example.test_2.ui.home.db.DbDao o-- com.example.test_2.ui.home.db.RecordSQLiteOpenHelper : helper
  com.example.test_2.ui.home.db.RecordSQLiteOpenHelper -up-|> android.database.sqlite.SQLiteOpenHelper


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
